kubernetes/yml/postgresql.yaml
#echo "" >a.yaml && nano a.yaml && kubectl apply -f a.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
#  serviceName: "postgresql-hs"
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
      annotations:
        #prometheus.io/scrape: "true"
        #prometheus.io/scheme: "http"
        #prometheus.io/path: "/actuator/prometheus"
        #prometheus.io/port: "5432"  
    spec:
      containers:
      - name: postgresql
        image: postgres:9.6
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
spec:
  type: NodePort
  ports:
  - port: 5432
    #nodePort: 30070
    targetPort: 5432
    protocol: TCP
    name: tcp
  selector:
    app: postgresql
---
# An Ingress with 2 hosts and 3 endpoints
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: postgresql-ingress
  annotations:
    ingress.kubernetes.io/enable-cors: "true"
    ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  - host: postgresql
    http:
      paths:
      - path: /
        backend:
          serviceName: postgresql
          servicePort: 5432
